--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "react-dom": "17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
-    "stripe": "^8.209.0" 
+    "react-paystack": "^4.0.2",
+    "stripe": "^8.209.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
