--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.25.0",
     "canvas-confetti": "^1.5.1",
+    "framer-motion": "^10.0.1",
     "next": "12.1.0",
     "next-sanity-image": "^3.2.1",
     "react": "17.0.2",
@@ -20,7 +21,8 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-paystack": "^4.0.2",
-    "stripe": "^8.209.0"
+    "stripe": "^8.209.0",
+    "swiper": "^9.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
