--- a/sanitycommerce/package.json
+++ b/sanitycommerce/package.json
@@ -24,8 +24,11 @@
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^2.0.1",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.6.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.0.0"
   },
   "prettier": {
